# daily

./: .env.example  .gitignore  app.py  justfile  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
api/: webhook.py
scripts/: send_test_payload.py
src/: discord.py  formatters.py  verify.py
tests/: conftest.py  test_formatters.py  test_verify.py
tests/fixtures/: issue_closed_completed.json  issue_closed_not_planned.json  issue_opened.json  pr_closed_unmerged.json  pr_merged.json  pr_opened.json
