[project]
name = "daily"
version = "0.1.0"
description = "Discord notifier for y-sunflower GitHub org events"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.1",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
